flicker z-index bugfix

--- a/schedule/style.css
+++ b/schedule/style.css
@@ -81,6 +81,8 @@ h3
 	cursor: pointer;
 	
 	background-color: #AAAAAA;
+	
+	z-index: 2;
 }
 
 .course-type
@@ -119,25 +121,21 @@ h3
 .time-current
 {
 	background-color: #FFFF22;
-	z-index: 2;
 }
 
 .time-next
 {
 	background-color: #DDDDDD;
-	z-index: 2;
 }
 
 .time-previous
 {
 	background-color: #66DD44;
-	z-index: 2;
 }
 
 .time-nearest
 {
 	background-color: #FF4422;
-	z-index: 2;
 }
 
 .time-unable
